--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -322,6 +322,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "28628149",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bv/f0w21bd528q0yw0g8pxbb3740000gn/T/ipykernel_59485/1134722465.py:1: FutureWarning:\n",
+      "\n",
+      "The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount</th>\n",
+       "      <th>boxes_shipped</th>\n",
+       "      <th>box_amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>amount</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.018827</td>\n",
+       "      <td>0.232767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>boxes_shipped</th>\n",
+       "      <td>-0.018827</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.338462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>box_amount</th>\n",
+       "      <td>0.232767</td>\n",
+       "      <td>-0.338462</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 amount  boxes_shipped  box_amount\n",
+       "amount         1.000000      -0.018827    0.232767\n",
+       "boxes_shipped -0.018827       1.000000   -0.338462\n",
+       "box_amount     0.232767      -0.338462    1.000000"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr() "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "id": "a890a3a3",
    "metadata": {},
